GRNS alignment fix

--- a/MerlionPortal/MerlionPortal-war/web/css/merlionportal.css
+++ b/MerlionPortal/MerlionPortal-war/web/css/merlionportal.css
@@ -469,4 +469,5 @@ ol.d {
 }
 .ui-breadcrumb ul li .ui-menuitem-link{
     margin-top:0px;
+    color: #cc1010;
 }
